syntax = "proto3";

package gcpproxy.api.servicecontrol;

option go_package = "gcpproxy.api.servicecontrol";

import "validate/validate.proto";
import "api/matcher.proto";

message Requirement {
  // If true, allow requests without API Key. Otherwise a valid API key must be provided.
  bool allow_unregistered_calls = 1;
}

// If a request matches the RouteMatch, the Requirement will be applied.
message RequirementRule {
  // Use Envoy native RouteMatch so we can use Envoy native matching logic.
  Match match = 1 [(validate.rules).message.required = true];

  Requirement requires = 2;
}

// The configuration for the Service Control Filter.
message ServiceControlFilterConfig {
  // A list of Service Control RequirementRules. Each rule applies Requirements
  // for a single RouteMatch.
  repeated RequirementRule rules = 1;
}
